--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "multer": "^1.3.0",
-    "sharp": "^0.19.0"
-  },
-  "devDependencies": {
+    "sharp": "^0.19.0",
     "form-data": "^2.3.1",
     "node-fetch": "^2.0.0"
+  },
+  "devDependencies": {
+    "mocha": "^5.0.0"
   }
 }
