--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "github:jitflowlab/mediaflow",
   "main": "server.js",
   "scripts": {
-    "test": "npm run test:mocha && npm run test:lint",
+    "test": "node server.js > /dev/null 2>&1 & npm run test:mocha && npm run test:lint",
     "test:mocha": "./node_modules/.bin/mocha ./test/upload.js",
     "test:lint": "./node_modules/.bin/eslint ./src/**"
   },
