--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,12 @@ language: node_js
 node_js:
   - "9.0"
 
-sudo: false
+sudo: required
+
+services:
+  - docker
+
+before_install:
+  - docker build -t mediaflow:latest .
+  - docker run -it -p 3030:3030 --name mediaflow mediaflow:latest
+  - docker ps -a
