Updating test to not start up the server.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ services:
 
 before_install:
   - docker build -t mediaflow:latest .
-  - docker run -it -p 3030:3030 --name mediaflow mediaflow:latest
+  - docker run -d -p 3030:3030 --name mediaflow mediaflow:latest
   - docker ps -a
